--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-/01*.patch
-/config
-/makepkg
-*.tar.sign
-*.tar.xz
-*.xz.sig
+makepkg
+auto-cpu-optimization.sh
+01*.patch
+config
+*.part
+*.sign
+*.sig
 *.xz
 *.zst
